syntax = "proto3";

package yandex.spqr;

option go_package = "yandex/spqr/proto";


message ShardingRule {
  repeated string columns = 1;
}

message AddShardingRuleRequest {
  repeated ShardingRule rules = 1;
}

message AddShardingRuleReply {
}

message ListShardingRuleRequest {
}

message ListShardingRuleReply {
  repeated ShardingRule rules = 1;
}


service ShardingRulesService {
  rpc AddShardingRules(AddShardingRuleRequest) returns (AddShardingRuleReply) {}
  rpc ListShardingRules(ListShardingRuleRequest) returns (ListShardingRuleReply) {}
}
